tech chef cambiado.

--- a/src/app/blog-tech/blog-tech.component.html
+++ b/src/app/blog-tech/blog-tech.component.html
@@ -127,7 +127,7 @@
                     <ol class="list-unstyled">
                         <li><a href="https://retosdeprogramacion.com/" class="text-black">Retos de programación</a></li>
                         <li><a href="https://certidevs.com/" class="text-black">Formación gratuita</a></li>
-                        <li><a href="#" class="text-black">Retos de programación</a></li>
+                        <li><a href="#" class="text-black">Tech chef</a></li>
                     </ol>
                 </div>
             </div>
