ajustado tamaño de cards.

--- a/src/app/blog-tech/blog-tech.component.html
+++ b/src/app/blog-tech/blog-tech.component.html
@@ -24,8 +24,8 @@
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-white">Technology</strong>
                     <h3 class="mb-0 ">El universo de 42.</h3>
-                    <div class="mb-1 text-muted">May 02</div>
-                    <p class="card-text mb-auto">
+                    <div class="mb-1 text-">May 02</div>
+                    <p class="card-text">
                         ¿Cuál es el sentido de la vida, el universo y todo lo demás? Nuestro Androide favorito, <span
                             class="text-gradient" style="font-weight: bold;">Marvín</span> parece tener la respuesta.
                     </p>
@@ -47,8 +47,8 @@
                     <strong class="d-inline-block mb-2 custom-title">Work & Lifestyle</strong>
                     <h3 class="mb-0">De chef a tech.</h3>
                     <div class="mb-1 text-muted">May 02</div>
-                    <p class="mb-auto">El interesante camino de cómo decidí abandonar una carrera excéntrica como chef
-                        de alta cocina para adentrarme en el mundo de los bites, códigos y bugs.</p>
+                    <p class="mb-auto card-text">Cómo decidí abandonar una carrera excéntrica como chef
+                        de alta cocina para entrar al mundo de los bites, códigos y bugs.</p>
                     <a href="#" class="stretched-link text-dark">Continuar leyendo</a>
                 </div>
                 <div class="col-md-auto d-flex align-items-center">
