--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -63,7 +63,6 @@
       flex-wrap: nowrap;
     }
     
-    /* Ajuste del padding del navbar en pantallas pequeñas */
     .navbar {
       padding-right: 15px;
       padding-left: 15px;
@@ -83,6 +82,12 @@
     .bg-custom{
       background-color: #FFA33C ;
       opacity: 1!important;
+    }
+    .nav-item{
+      width: 40% !important;
+      margin-bottom: 1rem;
+      text-align: center;
+
     }
   
     
@@ -114,67 +119,7 @@
   /* Estilos adicionales para el botón primario en el hover */
   .btn-primary:hover {
     background-position: right center; 
-  }
-  .glitch {
-    position: relative;
-    font-size: 25px;
-    font-weight: 700;
-    line-height: 1.2;
-    color: #fff;
-    letter-spacing: 5px;
-    z-index: 1;
-    animation: shift 3s ease-in-out infinite alternate;
-  }
-  
-  .glitch:before,
-  .glitch:after {
-    display: block;
-    content: attr(data-glitch);
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.8;
-  }
-  
-  .glitch:before {
-    animation: glitch 3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
-    color: #012a68;
-    z-index: -1;
-  }
-  
-  .glitch:after {
-    animation: glitch 3s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both infinite;
-    color: #020101;
-    z-index: -2;
-  }
-  
-  @keyframes glitch {
-    0% {
-      transform: translate(0);
-    }
-  
-    20% {
-      transform: translate(-3px, 3px);
-    }
-  
-    40% {
-      transform: translate(-3px, -3px);
-    }
-  
-    60% {
-      transform: translate(3px, 3px);
-    }
-  
-    80% {
-      transform: translate(3px, -3px);
-    }
-  
-    to {
-      transform: translate(0);
-    }
-  }
-  
-  
+  }   
   .bg-custom{
     background-color: #202030;
     opacity: 0.9;
