--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,10 @@
 <nav class="navbar navbar-expand-md bg-custom">
   <div class="container-fluid">
     <a href="index.html">
-      <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 100px;">
+      <img class="ms-3" src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="" style="max-width: 100px;">
     </a>
 
-    <div class="loader">
-      <div data-glitch="" class="glitch"> </div>
-    </div>
+    
     <button class="navbar-toggler text-white" type="button" aria-controls="navbarContent"
       [attr.aria-expanded]="!collapsed" aria-label="Toggle navigation" (click)="collapsed = !collapsed">
       <span class="navbar-toggler-icon text-white "></span>
