--- a/src/app/blog-tech-detail/blog-tech-detail.component.html
+++ b/src/app/blog-tech-detail/blog-tech-detail.component.html
@@ -85,7 +85,7 @@
                     <br>
     
                     <!-- Bloque "About" -->
-                    <div class="p-4 mb-3 bg-light rounded box-shadow">
+                    <div class="p-4 mb-3 bg-light rounded box-shadow about">
                         <h4 class="fst-italic">About a tales of bites.</h4>
                         <p class="mb-0">Blog dedicado al diseño, tecnología, video juegos y demás.</p>
                     </div>
