--- a/src/app/blog-tech-detail/blog-tech-detail.component.html
+++ b/src/app/blog-tech-detail/blog-tech-detail.component.html
@@ -42,7 +42,7 @@
             <div class="col-md-4">
                 <div class="position-sticky" style="top: 2rem;">
                     <!-- Contenedor de imágenes -->
-                    <div id="carouselExampleCaptions" class="carousel  slide bg-light" data-bs-ride="carousel"
+                    <div id="carouselExampleCaptions" class="carousel box-shadow slide bg-light" data-bs-ride="carousel"
                         style="border-radius: 20px;">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
@@ -86,7 +86,7 @@
     
                     <!-- Bloque "About" -->
                     <div class="p-4 mb-3 bg-light rounded box-shadow about">
-                        <h4 class="fst-italic">About a tales of bites.</h4>
+                        <h4 class="fst-italic">About "A tales of bites."</h4>
                         <p class="mb-0">Blog dedicado al diseño, tecnología, video juegos y demás.</p>
                     </div>
     
@@ -113,7 +113,7 @@
             </div>
             <div class="col-md-8">
     
-                <article id="about-42" class="blog-post  rounded p-4 bg-light lead" style="text-align: justify;">
+                <article id="about-42" class="blog-post box-shadow rounded p-4 bg-light lead" style="text-align: justify;">
                     <h3 class="blog-post-title"> 42, 43, 44... El secreto de la vida, el universo y todo lo demás.
                     </h3>
                     <p class="blog-post-meta">Mayo 2, 2024 by <a href="#" class="text-dark">Jehiel Linarez</a></p>
@@ -144,70 +144,53 @@
     
                     <h4>Objetivos</h4>
                     <blockquote class="blockquote" style="text-align: justify;">
-                        <p>Claros y precisos.</p>
+                        <p>Get out of the black hole.</p>
                     </blockquote>
     
                     <div class="container" style="text-align: justify;">
                         <p>
-                            Nuestros objetivos son claros y precisos, sabemos que la motivación sin un plan de acción, puede
-                            generar mucha frustración, queremos crear una comunidad de aprendizaje y crecimiento, con Tech
-                            chef vamos asesorar al pequeño empresario de la hostería en españa. <br>
-                            Con <span class="text-gradient" style="font-weight: bolder;">A tales of bites</span>, queremos
-                            ayudar a esos jovenes trabajadores de la hostelería que se sienter perdidos y sin un rumbo
-                            claro.
+                            Tenemos objetivos muy claros dentro de <strong>42</strong>, vencer a <strong>Moulinette</strong>, alejarnos del black hole y no caer en los TIGS, pero ¿de que se trata todo esto? <br>
+                            No te lo voy a decir, el indicado para esto es <span class="text-gradient" style="font-weight: bolder;">Marvin</span>, solo preparate para la experiencia que cambiará tu vida, porque en <strong>42</strong> no solo aprenderás a programar, aprenderás a aprender.
     
                         </p>
-                        <h5>Para lograrlo, nos enfocaremos en los siguientes puntos:</h5>
+                        <h5>Para lograrlo, tienes una ruta muy clara:</h5>
                         <ul>
-                            <li>Crear contenido de calidad y relevante para la comunidad.</li>
-                            <li>Brindar oportunidades de aprendizaje y crecimiento a los jóvenes talentos.</li>
-                            <li>Desarrollar soluciones tecnologícas que permitan mejorar la calidad de vida de los
-                                trabajadores de la hostelería.</li>
-                            <li>Facilitar herramientas tecnologícas para el pequeño empresario y autónomo.</li>
-                            <li>Crear una compañía exitosa y rentable.</li>
+                            <li>Entra en la <a class="text-dark" href="https://www.42madrid.com/"> <strong>pagina web</strong></a> del campus, registrate y debes realizar un test gamificado.</li>
+                            <li>Inscribete en las <strong>piscinas</strong> que el campus coloca a tu disposición en su pagina web.</li>
+                            <li>Procura dar el todo de ti, los criterios de admisión solo los conoce <span class="text-gradient" style="font-weight: bolder;">Marvin</span>, pero si das el 100%, tienes tu sitio en el campus.</li>
+                            <li>Kick off, comienza la acción.</li>
+                            
                         </ul>
     
-                        <h5>Así vamos a comenzar:</h5>
-                        <ol>
-                            <li>Fundación de tech chef</li>
-                            <li>I + D</li>
-                            <li>Divulgación de estudios</li>
-                            <li>Bitebooking en manos de todos</li>
-                        </ol>
+                        <h5>Y si haz llegado a este punto recuerda:</h5>
+                        <ul>
+                            <li>Investiga, estudia, no te quedes con una respuesta.</li>
+                            <li>No mires Github.</li>
+                            <li>Alejate del Blackhole.</li>
+                            <li>Cuidate de los tigs.</li>
+                            <li>Evalua, el peer to peer es lo mas importante.</li>
+                            <li>Manten tu campús limpio, es de todos.</li>
+                        </ul>
     
-                        <dl>
-                            <dt>Tech chef</dt>
-                            <dd>Plataforma dedicada al asesoramiento del sector hostelero, especializada en desarrollo de
-                                nuevas marcas, control de calidad de alimentos, formación de personal, digitalizacion del
-                                sector hostelero.</dd>
-                            <dt class="mt-3">I + D</dt>
-                            <dd>Constantemente estaremos desarrollando e innovando nuevas tecnologias para colocarlas en
-                                manos de todos, todos los pequeños empresarios contaran con un apoyo en soluciones
-                                tecnologicas que esten al alcance de todos.</dd>
-                            <dt class="mt-3">Divulgación de estudios</dt>
-                            <dd>Una de las cosas que siempre he amado de la comunidad, es la capacidad de compartir la
-                                información y nosotros no seremos la excepción, nos dedicaremos a compartir toda la
-                                información de manera libre y sin restricciones.</dd>
-                            <dt class="mt-3">Bitebooking en manos de todos</dt>
-                            <dd>En el master de desarrollo web cursado este año, he logrado desarrollar junto a mis
-                                compañeros, BiteBooking, es una plataforma que permite a los restaurantes gestionar reservas
-                                de usuario en tiempo real, permitiendo crear menús, te permite dar una mayor exposición de
-                                tu negocio y llegar a tu comensal, esto quedo como un proyecto de clase de mucho exito, sin
-                                embargo en el futuro, planeamos desarrollar una herramienta similar, que permita al pequeño
-                                empresario tener una herramienta gratuita para mejorar sus ventas y visibilidad en la red.
-                            </dd>
-                        </dl>
+                        <h5>Duración y tiempo</h5>
+                        <ul>
+                            <li>Common core: <strong>1.5 años.</strong></li>
+                        <p>Periodo de estudios base, debes realizar todos los proyectos obligatorios dentro de <strong>42</strong> para ser considerado alumno permanente.</p>
+                        <li>Especialización: <strong>1 a 1.5 años.</strong></li>
+                        <p>Periodo de Especializacion, puedes elegir ramas como : ciberseguridad, desarrollo de videojuegos, desarrollo web, Big Data, Machine Learning y sistemas.</p>
+                        <li>Proyectos: <strong>2 semanas a 3 meses.</strong></li>
+                        <p>La moulinette es exigente, nuestros estudiantes son exigentes, tu debes ser exigente, cada proyecto lleva su periodo y lo mas importante es que lo hagas paso a paso, no te sales, no te apures, 42 esta diseñado para que puedas desarrollar tus proyectos de manera correcta, de diferentes complejidades, uno a uno te llevara a la excelencia como desarrollador.</p>
+
+                        </ul>
+                        
                     </div>
     
-                    <h3>¿What about the fun? </h3>
+                    <h4>¿What about the fun? </h4>
     
-                    <p>Es cierto, es cierto, estamos en mi portfolio y se me ha escapado lo mas importante:
-                        <strong>Divertirnos.</strong> <br>
+                    <p>Es verdad, siempre llegamos a estar parte y se me olvida lo importante, lo que nos mueve, lo que nos hace ser mejores, lo que nos hace ser <strong>42</strong>:
+                        <strong>¡Divertirnos!</strong> <br>
     
-                        Gracias por llegar hasta aquí, gracias por interesarte en mi proyecto, gracias por creer que dentro
-                        de este oceano de <strong>bites</strong>, podemos conectar y hacer la diferencia, me esforzare por
-                        traerte contenido de calidad, por mejorar la comunidad, por divertirme, por continuar estudiante y
-                        que seas parte de este viaje, tendremos muchas sorpresas, invitados y demas.
+                        Te rodearas de un entorno divertido, de compañerismo, amigable y de aprendizaje, donde contaremos con iniciativas como las ligas, el sistema de casas o facciones, el peer to peer, el studio 42, las actividades semanales, los diferentes eventos y algun que otro secreto que se esconde en el campus. 
                     </p>
     
     
