Agregado nuevo post "about-me"

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="col-lg-5">
-                        <img src="https://media.licdn.com/dms/image/D4D03AQHzgbxlBXh0mw/profile-displayphoto-shrink_800_800/0/1712954050224?e=1720051200&v=beta&t=5DgHK696p0V1MAirQ2g47-SKBfX5zCltGX8b1ffSouQ"
+                        <img src="https://i.ibb.co/BLfxddp/profile.jpg"
                             class="img-fluid custom-photo" alt="">
                     </div>
 
@@ -321,9 +321,8 @@
             </p>
 
             <div class="tooltip-container">
-                <span class="tooltip">Pronto podras conocer nuestras ideas en nuestro blog.</span>
                 <a routerLink="blog-tech">
-                    <button class="btn btn-outline-danger text">Aquí podras visitar nuestro blog.</button>
+                    <button class="btn btn-outline-danger text">Visita nuestro blog.</button>
 
                 </a>>
 
