--- a/src/app/blog-tech/blog-tech.component.html
+++ b/src/app/blog-tech/blog-tech.component.html
@@ -62,6 +62,7 @@
     
                 </div>
             </div>
+            
             <div class="col-md-6 mt-3">
                 <div
                     class="row g-0 lead rounded overflow-hidden box-shadow flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-light">
@@ -71,7 +72,7 @@
                         <div class="mb-1 text-muted">May 02</div>
                         <p class="mb-auto card-text">Cómo decidí abandonar una carrera excéntrica como chef
                             de alta cocina para entrar al mundo de los bites, códigos y bugs.</p>
-                        <a href="#" class="stretched-link text-dark">Continuar leyendo</a>
+                        <a href="blog-tech/about-me" class="stretched-link text-dark">Continuar leyendo</a>
                     </div>
                     <div class="col-md-auto d-flex align-items-center">
                         <img class="bd-placeholder-img" width="200" height="100%" src="https://i.ibb.co/m6ZVJ7x/chef1.jpg"
