--- a/src/app/blog-tech-about-me/blog-tech-about-me.component.css
+++ b/src/app/blog-tech-about-me/blog-tech-about-me.component.css
@@ -55,4 +55,14 @@
     .about{
         display: none;
     }
+    .loader-container{
+        transform: translate(-50%, -50%);
+        width: 30px; 
+        height: 30px; 
+      
+        margin-left: 45% !important;
+        margin-top: 20%;
+        margin-bottom: 30%;
+      
+      }
 }
