--- a/src/app/projects-list/projects-list.component.css
+++ b/src/app/projects-list/projects-list.component.css
@@ -213,6 +213,16 @@
       margin-left: 10% !important;
     
     }
+    .loader-container{
+      transform: translate(-50%, -50%);
+      width: 30px; 
+      height: 30px; 
+    
+      margin-left: 45% !important;
+      margin-top: 20%;
+      margin-bottom: 30%;
+    
+    }
   }
   
   }
