--- a/src/styles.css
+++ b/src/styles.css
@@ -131,3 +131,18 @@ body {
     }
   }
   
+  @media screen and (max-width: 992px) {
+  
+ 
+    .loader-container{
+      transform: translate(-50%, -50%);
+      width: 30px; 
+      height: 30px; 
+    
+      margin-left: 45% !important;
+      margin-top: 20%;
+      margin-bottom: 30%;
+    
+    }
+    
+  }
