Agregado nuevo post gamification.

--- a/src/app/blog-tech/blog-tech.component.html
+++ b/src/app/blog-tech/blog-tech.component.html
@@ -92,7 +92,7 @@
                             ¿Qué tienen en común los videojuegos y el desarrollo de software? Descúbrelo en este post.
                         </p>
     
-                        <a href="#" class="stretched-link text-black">Continuar leyendo</a>
+                        <a href="/blog-tech/about-gamification" class="stretched-link text-black">Continuar leyendo</a>
                     </div>
                     <div class="col-md-auto d-flex align-items-center">
                         <img class="bd-placeholder-img" width="200" height="100%"
