--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="py-5 border-top footer-custom">
     <div class="row justify-content-center align-items-center" style="--bs-gutter-x: 0;">
         <div class="col-12 col-md-2 mb-3 mb-md-0">
-            <a routerLink="/home"
+            <a target="_blank" routerLink="/home"
                 class="d-flex align-items-center justify-content-center mb-3 me-md-auto link-body-emphasis text-decoration-none">
                 <img src="https://i.ibb.co/tKV9fKn/logo-tech2.png" alt="Logo" width="100"
                     class="d-inline-block align-text-top">
@@ -38,17 +38,17 @@
         <div class="col text-center">
             <ul class="list-unstyled d-flex justify-content-center align-items-center">
                 <li class="ms-3">
-                    <a class="link-body-emphasis" href="">
+                    <a target="_blank" class="link-body-emphasis" href="">
                         <i class="bi bi-github fs-1"></i>
                     </a>
                 </li>
                 <li class="ms-3">
-                    <a class="link-body-emphasis" href="https://www.instagram.com/jehiell">
+                    <a target="_blank" class="link-body-emphasis" href="https://www.instagram.com/jehiell">
                         <i class="bi bi-instagram fs-1"></i>
                     </a>
                 </li>
                 <li class="ms-3">
-                    <a class="link-body-emphasis" href="https://www.linkedin.com/in/jehiel-linarez/">
+                    <a target="_blank" class="link-body-emphasis" href="https://www.linkedin.com/in/jehiel-linarez/">
                         <i class="bi bi bi-linkedin fs-1"></i>
                     </a>
                 </li>
