--- a/src/app/about-gamification/about-gamification.component.html
+++ b/src/app/about-gamification/about-gamification.component.html
@@ -270,7 +270,8 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1">Tecnología a tu alcance junto a <span
                         class="text-body-secondary">Certidevs.</span></h2>
-                <p class="lead">¡La innovadora startup española fundada por <a target="_blank" class="text-dark" href="https://www.linkedin.com/in/alansastre/"><strong>Alan
+                <p class="lead">¡La innovadora startup española fundada por <a target="_blank" class="text-dark"
+                        href="https://www.linkedin.com/in/alansastre/"><strong>Alan
                             Sastre</strong></a>! Con un enfoque único en la gamificación de desafíos, te ofreceran
                     la oportunidad de superar retos emocionantes mientras te certificas en tus tecnologías favoritas.
                     Desde frontend hasta backend, pasando por bases de datos, te sumergirás en una experiencia de
@@ -308,7 +309,8 @@
             <div class="col-md-7 order-md-2">
                 <h2 class="featurette-heading fw-normal lh-1">Univers Inside. <span class="text-body-secondary">Un
                         nuevo universo.</span></h2>
-                <p class="lead">Apoyando el talento, presentamos otra innovadora startup española, liderada por <a target="_blank" class="text-dark"
+                <p class="lead">Apoyando el talento, presentamos otra innovadora startup española, liderada por <a
+                        target="_blank" class="text-dark"
                         href="https://www.linkedin.com/in/ceciliajimenezgonzalez/"><strong>Cecilia Jiménez
                             González</strong></a>.</p>
                 <p class="lead">Univers Inside transforma desafíos en innovación continua mediante una metodología
@@ -333,16 +335,24 @@
 
         <div class="row featurette bg-light p-5 mb-3 rounded">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">The king of game. <span class="text-body-secondary">CodeCombat.</span></h2>
-                <p class="lead">CodeCombat, una plataforma educativa líder en programación, ha impactado a más de 20 millones de estudiantes en todo el mundo, ayudándoles a desarrollar habilidades críticas y creativas en ciencias de la computación.</p>
-                <p class="lead">Con el respaldo de más de 120,000 profesionales y asociaciones destacadas como Amazon, CodeCombat se destaca como una herramienta esencial para la enseñanza de la programación. Su compromiso con la excelencia educativa y la innovación continúa inspirando a la próxima generación de líderes tecnológicos.</p>
+                <h2 class="featurette-heading fw-normal lh-1">The king of game. <span
+                        class="text-body-secondary">CodeCombat.</span></h2>
+                <p class="lead">CodeCombat, una plataforma educativa líder en programación, ha impactado a más de 20
+                    millones de estudiantes en todo el mundo, ayudándoles a desarrollar habilidades críticas y creativas
+                    en ciencias de la computación.</p>
+                <p class="lead">Con el respaldo de más de 120,000 profesionales y asociaciones destacadas como Amazon,
+                    CodeCombat se destaca como una herramienta esencial para la enseñanza de la programación. Su
+                    compromiso con la excelencia educativa y la innovación continúa inspirando a la próxima generación
+                    de líderes tecnológicos.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="https://codecombat.com/images/pages/home-v2/codecombat-classroom.webp" alt="" width="500" height="500">
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+                    src="https://codecombat.com/images/pages/home-v2/codecombat-classroom.webp" alt="" width="500"
+                    height="500">
             </div>
         </div>
-        
-        
+
+
     </div>
 
 
@@ -355,45 +365,47 @@
     <div class="row">
         <!-- Card de artículo relacionado 1 -->
         <div class="col-md-6">
-            <div class="row g-0 bg-dark lead rounded overflow-hidden flex-md-row mb-4 box-shadow shadow-sm h-md-250 position-relative card-hover">
+            <div
+                class="row g-0 bg-dark lead rounded overflow-hidden flex-md-row mb-4 box-shadow shadow-sm h-md-250 position-relative card-hover">
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-white">Artificial intelligence</strong>
                     <h3 class="mb-0 text-white">Powered by AI.</h3>
                     <div class="mb-1 text-muted">May 02</div>
                     <p class="card-text mb-auto text-white">
-                        Inteligencia artificial, machine learning, deep learning, ¿qué significan estos términos y cómo afectarán nuestro futuro?
+                        Inteligencia artificial, machine learning, deep learning, ¿qué significan estos términos y cómo
+                        afectarán nuestro futuro?
                     </p>
                     <a href="#" class="stretched-link text-black">Continuar leyendo</a>
                 </div>
                 <div class="col-md-auto d-flex align-items-center">
-                    <img class="bd-placeholder-img" width="200" height="100%" src="https://i.ibb.co/L9Lc025/r2xwgj0u.png" alt="Super Paranoid Android 42" aria-label="Super Paranoid Android 42">
+                    <img class="bd-placeholder-img" width="200" height="100%"
+                        src="https://i.ibb.co/L9Lc025/r2xwgj0u.png" alt="Super Paranoid Android 42"
+                        aria-label="Super Paranoid Android 42">
                 </div>
             </div>
         </div>
         <!-- Card de artículo relacionado 2 -->
         <div class="col-md-6">
-            <div class="row g-0 bg-dark lead rounded overflow-hidden flex-md-row mb-4 box-shadow shadow-sm h-md-250 position-relative card-hover">
+            <div
+                class="row g-0 bg-dark lead rounded overflow-hidden flex-md-row mb-4 box-shadow shadow-sm h-md-250 position-relative card-hover">
                 <div class="col p-4 d-flex flex-column position-static">
                     <strong class="d-inline-block mb-2 text-white">Technology</strong>
                     <h3 class="mb-0 text-white">El universo de 42.</h3>
                     <div class="mb-1 text-muted">May 02</div>
                     <p class="card-text mb-auto text-white">
-                        ¿Cuál es el sentido de la vida, el universo y todo lo demás? Nuestro Androide favorito, <span class="text-gradient" style="font-weight: bold;">Marvín</span>, parece tener la respuesta.
+                        ¿Cuál es el sentido de la vida, el universo y todo lo demás? Nuestro Androide favorito, <span
+                            class="text-gradient" style="font-weight: bold;">Marvín</span>, parece tener la respuesta.
                     </p>
                     <a href="blog-tech-detail" class="stretched-link text-white">Continuar leyendo</a>
                 </div>
                 <div class="col-md-auto d-flex align-items-center">
-                    <img class="bd-placeholder-img" width="200" height="100%" src="https://shirtoid.com/wp-content/uploads/2015/02/Super-Paranoid-Android-42.jpg" alt="Super Paranoid Android 42" aria-label="Super Paranoid Android 42">
+                    <img class="bd-placeholder-img" width="200" height="100%"
+                        src="https://shirtoid.com/wp-content/uploads/2015/02/Super-Paranoid-Android-42.jpg"
+                        alt="Super Paranoid Android 42" aria-label="Super Paranoid Android 42">
                 </div>
             </div>
         </div>
         <!-- Agrega más cards de artículos relacionados aquí -->
     </div>
 </div>
-
-
-
-
-
-
 }
