Refactor css para version mobile.

--- a/src/app/about-gamification/about-gamification.component.html
+++ b/src/app/about-gamification/about-gamification.component.html
@@ -378,7 +378,7 @@
                     <a href="#" class="stretched-link text-black">Continuar leyendo</a>
                 </div>
                 <div class="col-md-auto d-flex align-items-center">
-                    <img class="bd-placeholder-img" width="200" height="100%"
+                    <img class="bd-placeholder-img img-recommended" width="200" height="100%"
                         src="https://i.ibb.co/L9Lc025/r2xwgj0u.png" alt="Super Paranoid Android 42"
                         aria-label="Super Paranoid Android 42">
                 </div>
@@ -399,7 +399,7 @@
                     <a href="blog-tech-detail" class="stretched-link text-white">Continuar leyendo</a>
                 </div>
                 <div class="col-md-auto d-flex align-items-center">
-                    <img class="bd-placeholder-img" width="200" height="100%"
+                    <img class="bd-placeholder-img img-recommended" width="200" height="100%"
                         src="https://shirtoid.com/wp-content/uploads/2015/02/Super-Paranoid-Android-42.jpg"
                         alt="Super Paranoid Android 42" aria-label="Super Paranoid Android 42">
                 </div>
