--- a/src/app/about-gamification/about-gamification.component.css
+++ b/src/app/about-gamification/about-gamification.component.css
@@ -155,6 +155,13 @@ button:active {
         padding: 10px;
         font-size: 14px;
     }
+    .img-recommended {
+        width: 50%; 
+        height: 70%;
+        border-radius: 50%;
+        margin-left: 25%;
+      
+    }
 }
 .card-hover:hover .col {
     transition: transform 0.3s ease;
