Actualizada url code combat.

--- a/src/app/about-gamification/about-gamification.component.html
+++ b/src/app/about-gamification/about-gamification.component.html
@@ -256,7 +256,7 @@
                 <p>Con un gran motor grafico, <strong>Code combat</strong> se posiciona como una plataforma fuerte,
                     especializada en jovenes y principiantes, proporciona un entorno amable donde aprender paso a paso
                     logica y algoritmos, amig.</p>
-                <p><a target="_blank" href=""><button>Explorar »</button></a></p>
+                <p><a target="_blank" href="https://codecombat.com/"><button>Explorar »</button></a></p>
             </div>
         </div>
 
