cambiado errores ortografico s

--- a/src/app/about-gamification/about-gamification.component.html
+++ b/src/app/about-gamification/about-gamification.component.html
@@ -118,7 +118,7 @@
         <div class="col-md-8">
 
             <article id="about-42" class="blog-post box-shadow rounded p-4 bg-light lead" style="text-align: justify;">
-                <h3 class="blog-post-title"> Videojuegos, desarrollo y IA: la conexión que transforma el aprendizaje
+                <h3 class="blog-post-title"> Videojuegos, desarrollo e IA: la conexión que transforma el aprendizaje
                 </h3>
                 <p class="blog-post-meta">Mayo 21, 2024 by <a href="https://www.linkedin.com/in/jehiel-linarez/"
                         class="text-dark">Jehiel Linarez</a></p>
