Editado continuar leyendo, refactor errores ortografía.

--- a/src/app/about-gamification/about-gamification.component.html
+++ b/src/app/about-gamification/about-gamification.component.html
@@ -27,12 +27,11 @@
                 is <span class="custom-name">here !</span>
             </h1>
             <p class="lead my-3 custom-text" style="font-weight: 400;"> <br>
-                ¡Prepárate, porque la batalla está por comenzar
+                ¡Prepárate, porque la batalla está por comenzar!
                 <br>
                 En este artículo, exploraremos cómo la gamificación del desarrollo se convierte en un poderoso
                 catalizador para el aprendizaje, atrayendo e inspirando a las futuras generaciones de programadores.
             </p>
-            <p class="lead mb-0"><a href="#about-42" class="text-white fw-bold">Continuar leyendo...</a></p>
         </div>
     </div>
 </div>
@@ -118,7 +117,7 @@
         <div class="col-md-8">
 
             <article id="about-42" class="blog-post box-shadow rounded p-4 bg-light lead" style="text-align: justify;">
-                <h3 class="blog-post-title"> Videojuegos, desarrollo e IA: la conexión que transforma el aprendizaje
+                <h3 class="blog-post-title"> Videojuegos, desarrollo e IA: la conexión que transforma el aprendizaje.
                 </h3>
                 <p class="blog-post-meta">Mayo 21, 2024 by <a href="https://www.linkedin.com/in/jehiel-linarez/"
                         class="text-dark">Jehiel Linarez</a></p>
@@ -245,7 +244,7 @@
                 <h2 class="fw-normal">Certidevs</h2>
                 <p>Enfocado en el desarrollo fullstack, <strong>certidevs </strong>maneja diferentes stacks tecnologicos
                     de estudio, su plataforma especializada en la educación, te brinda un entorno gamificado, evaluado
-                    por IA y con clases 100% gratuisas.</p>
+                    por IA y con clases 100% gratuitas.</p>
                 <p><a target="_blank" href="https://certidevs.com/"><button>Explorar »</button></a></p>
             </div>
 
